Fixed LandingPage footer spacing

--- a/src/client/styles/_landing-page.scss
+++ b/src/client/styles/_landing-page.scss
@@ -189,6 +189,7 @@
 
     a {
       color: rgba(255, 255, 255, 0.8);
+      min-width: 100px;
       &:hover {
         color: white;
       }
